--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Mapa Interativo RJ</title>
   <link rel="stylesheet" href="style.css"/>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-database-compat.js"></script>
 </head>
 <body>
   <h1>Onde você moraria no CEPAINT?</h1>
